<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/mainBG"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <RelativeLayout
            android:id="@+id/lnrr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/bannerLayout">

            <com.appscreat.project.skins.render.SkinGLSurfaceView
                android:id="@+id/skins"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|right"
            android:orientation="vertical"
            android:layout_above="@+id/bannerLayout">

            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/fab_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                fab:menu_labels_position="left"
                fab:menu_openDirection="up"
                fab:menu_animationDelayPerItem="0"
                fab:menu_colorNormal="@color/colorNormal"
                fab:menu_colorPressed="@color/colorPressed"
                fab:menu_colorRipple="@color/colorRipple"
                fab:menu_labels_ellipsize="end"
                fab:menu_labels_maxLines="2"
                fab:menu_labels_singleLine="true">

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_save_to_minecraft"
                    style="@style/MenuButtonsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fab_check"
                    fab:fab_label="@string/save_to_minecraft"
                    fab:fab_size="mini" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_save_to_gallery"
                    style="@style/MenuButtonsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fab_save"
                    fab:fab_label="@string/save_to_gallery"
                    fab:fab_size="mini" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_add_to_favorite"
                    style="@style/MenuButtonsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fab_favorite_false"
                    fab:fab_label="@string/add_to_favorite"
                    fab:fab_size="mini" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_remove_ads"
                    style="@style/MenuButtonsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fab_removeads"
                    fab:fab_label="@string/remove_ads"
                    fab:fab_size="mini" />

            </com.github.clans.fab.FloatingActionMenu>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:id="@+id/bannerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
